# vapoursynth-resize2

./: .gitignore  ReadMe.md  meson.build  meson_options.txt  resize.cpp
.github/workflows/: windows.yml
subprojects/: zimg.wrap
subprojects/packagefiles/zimg/: meson.build
